[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/player cannon.gd" type="Script" id=1]
[ext_resource path="res://art/beams.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 21.0
height = 12.0

[node name="cannon" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="cannon" type="Sprite" parent="."]

transform/scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 1.5, 180.833, 23.5, 27.5 )

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -38, -38, 75, 75 )

[connection signal="area_enter" from="." to="." method="_on_cannon_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_cannon_body_enter"]

[connection signal="exit_screen" from="VisibilityNotifier2D" to="." method="_on_exit_screen"]


